Update footer share icons and linkedin reference.

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -212,6 +212,10 @@ div.right-ice{
     height:45px;
 }
 
+#footer .shareIcons a{
+    text-decoration: none;
+}
+
 .shareIcon{
     width:32px;
     height:32px;
