--- a/static/css/common.css
+++ b/static/css/common.css
@@ -269,13 +269,13 @@ div.right-ice{
     box-shadow:none;
 }
 
-@media only screen and (max-width:767px)  {
+@media(max-width: 979px) {
     /* Hide the brand and share icons on mobile devices to avoid crowding out the nav */
     #footer .brand{
-        display:none;
+        display:none !important;
     }
     #footer .shareIcons{
-        display:none;
+        display:none !important;
     }
 }
 /** End Footer Nav */
